// data structures for https://man7.org/linux/man-pages/man5/proc.5.html
syntax = "proto2";

package eflect.protos.sample;

option java_multiple_files = true;
option java_package = "eflect.protos.sample";

// cpu jiffies counts as described by /proc/stat
message CpuStat {
  required uint32 cpu = 1;
  optional uint32 user = 2; // total counts
  optional uint32 nice = 3; // total counts
  optional uint32 system = 4; // total counts
  optional uint32 idle = 5; // total counts
  optional uint32 iowait = 6; // total counts
  optional uint32 irq = 7; // total counts
  optional uint32 softirq = 8; // total counts
  optional uint32 steal = 9; // total counts
  optional uint32 guest = 10; // total counts
  optional uint32 guest_nice = 11; // total counts
}

message CpuSample {
  required uint64 timestamp = 1;  // ms unix time
  repeated CpuStat stat = 2;
}

// task jiffies counts as described by /proc/[pid]/task/[tid]/stat
message TaskStat {
  required uint32 task_id = 1;
  optional string name = 2; // total counts
  required uint32 cpu = 3; // total counts
  optional uint32 user = 4; // total counts
  optional uint32 system = 5; // total counts
}

message TaskSample {
  required uint64 timestamp = 1;  // ms unix time
  repeated TaskStat stat = 2;
}
